# CMake.University

./: .gitmodules  README.md
.example/VSCode/: readme.md
.example/VSCode/Simplest/: CMakeLists.txt
.example/testXev/: CMakeLists.txt  build  main.cpp
.graph/: readme.md
.graph/IDE/: readme.md
.graph/IDE/CodeBlocks/: readme.md
.graph/IDE/VSCode/: readme.md
Book/: readme.md
Course/by/Jason Turner/: readme.md
Generate/project/: readme.md
IDE:/Visual Studio Code/: .vscode tasks.json & launch.json readme.md  readme.md
IDE:/Visual Studio Code/.vscode tasks.json/: readme.md
IDE:/Visual Studio Code/.vscode tasks.json & launch.json/: readme.md
IDE:/Visual Studio Code/CMake Quickstart/: readme.md
IDE:/Visual Studio Code/Favorite:/: readme.md
IDE:/Visual Studio Code/Guide:/: readme.md
IDE:/Visual Studio Code/Hotkey/: readme.md
IDE:/Visual Studio Code/Keyboard Shortcut/: readme.md
IDE:/Visual Studio Code/generate( CmakeLists.txt )/: readme.md
IDE:/Visual Studio Code/steps:/: readme.md
IDE:/Visual Studio Code/tutorial:/: readme.md
Testing/: readme.md
University/by:/C++ Weekly With Jason Turner/: readme.md
University/by:/Code for yourself/: readme.md
by/Code for yourself/: readme.md
by/Kea Sigma Delta/: readme.md
by/Luke's Dev Tutorials/: readme.md
by/PunchedTape/: readme.md
by/Smok Code/: readme.md
by/sudocpp/: readme.md
dependency management/FetchContent/: readme.md
example/OpenCV/: readme.md
settings/CMake Presets/: readme.md
template:/by: LearnQtGuide/simplest/src/: CMakeLists.txt  main.cpp  readme.md
(+7 files in other folders)
